fix(codeviewer): placeholder misalign

--- a/sandpack-react/src/styles/index.css
+++ b/sandpack-react/src/styles/index.css
@@ -122,6 +122,10 @@
   height: 100%;
 }
 
+.sp-cm code {
+  display: block;
+}
+
 .sp-cm:focus-visible {
   box-shadow: inset 0 0 0 4px var(--sp-colors-accent);
   padding-left: var(--sp-space-1);
